# django-send-sms

./: LICENSE.txt  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
django_universal_sms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
send_sms/: models.py  views.py
send_sms/migrations/: 0001_initial.py  0002_remove_smssettings_static_parameters_smsparameters.py
