# setup.cfg
[metadata]
name = django-universal-sms
version = 1.0.6
author = Hizbul Bahar
author_email = hizbul.ku@gmail.com
maintainer = Hizbul Bahar
maintainer_email = hizbul.ku@gmail.com
description = Send SMS using Django
url = https://github.com/hizbul25/django-send-sms
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2
    requests >= 2.2.0